--- a/styles/home.scss
+++ b/styles/home.scss
@@ -11,7 +11,14 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     margin: 70px 0;
-  }
+}
+
+.numClients {
+    float: right;
+    border: 5px;
+    padding: 5px;
+    margin: 15px;
+}
 
 .chatbar {
     background: tomato;
