--- a/styles/home.scss
+++ b/styles/home.scss
@@ -6,7 +6,7 @@ h1 {
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
 
 body {
-    background: white;
+    background: lightgrey;
     color: black;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
